// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Terraform Var Store tests initial render 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main tfVarStore StyledProps--padding-small"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
      level="2"
      style="color: black; font-size: 24px;"
    >
      cd.specifyTfVarStore
    </h2>
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-flex-start"
    >
      <div
        class="squareCardContainer"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card manifestIcon"
          data-testid="varStore-Git"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="service-github"
          >
            <svg
              height="26"
              viewBox="0 0 14 14"
              width="26"
            >
              <path
                d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                fill="#f42534"
              />
            </svg>
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
        >
          Git
        </p>
      </div>
      <div
        class="squareCardContainer"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card manifestIcon"
          data-testid="varStore-Github"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="github"
          >
            <svg
              height="26"
              viewBox="0 0 24 24"
              width="26"
            >
              <path
                d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
              />
            </svg>
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
        >
          Github
        </p>
      </div>
      <div
        class="squareCardContainer"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card manifestIcon"
          data-testid="varStore-GitLab"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="service-gotlab"
          >
            <svg
              height="26"
              viewBox="0 0 14 13"
              width="26"
            >
              <path
                d="M7 12.9L9.6 5H4.4z"
                fill="#e24329"
              />
              <path
                d="M7 12.9L4.4 5H.8z"
                fill="#fc6d26"
              />
              <path
                d="M.8 5L0 7.4c0 .2 0 .5.2.6L7 12.9z"
                fill="#fca326"
              />
              <path
                d="M.8 5h3.6L2.9.2c-.1-.2-.5-.2-.5 0z"
                fill="#e24329"
              />
              <path
                d="M7 12.9L9.6 5h3.6z"
                fill="#fc6d26"
              />
              <path
                d="M13.2 5l.8 2.4c0 .2 0 .5-.2.6L7 12.9z"
                fill="#fca326"
              />
              <path
                d="M13.2 5H9.6L11.2.2c.1-.2.4-.2.5 0z"
                fill="#e24329"
              />
            </svg>
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
        >
          GitLab
        </p>
      </div>
      <div
        class="squareCardContainer"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card manifestIcon"
          data-testid="varStore-Bitbucket"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="bitbucket"
          >
            <svg
              height="26"
              width="26"
            >
              <defs>
                <lineargradient
                  id="bitbucket_svg__b"
                  x1="108.633%"
                  x2="46.927%"
                  y1="13.408%"
                  y2="79.102%"
                >
                  <stop
                    offset="18%"
                    stop-color="#0052CC"
                  />
                  <stop
                    offset="100%"
                    stop-color="#2684FF"
                  />
                </lineargradient>
                <filter
                  id="bitbucket_svg__a"
                >
                  <fecolormatrix
                    in="SourceGraphic"
                    values="0 0 0 0 0.157377 0 0 0 0 0.161311 0 0 0 0 0.240000 0 0 0 1.000000 0"
                  />
                </filter>
              </defs>
              <g
                fill="none"
                fill-rule="evenodd"
                filter="url(#bitbucket_svg__a)"
                transform="translate(2 3)"
              >
                <path
                  d="M8.305 12.59h4.383l1.058-6.211H7.14z"
                />
                <path
                  d="M.681.008a.671.671 0 00-.518.235.68.68 0 00-.154.55l2.855 17.432c.074.44.45.764.895.768h13.698a.674.674 0 00.673-.568L20.985.797a.68.68 0 00-.154-.55.671.671 0 00-.519-.235L.682.008zm12.024 12.6H8.333l-1.184-6.22h6.615l-1.06 6.22z"
                  fill="#2684FF"
                  fill-rule="nonzero"
                />
                <path
                  d="M20.06 6.379h-6.308l-1.059 6.215H8.325L3.166 18.75a.908.908 0 00.588.223h13.691a.673.673 0 00.672-.568L20.06 6.38z"
                  fill="url(#bitbucket_svg__b)"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
        >
          Bitbucket
        </p>
      </div>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form>
        <div
          class="formContainerStepOne"
        />
        <div
          class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main saveBtn"
        >
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Terraform Var Store tests select one of the types 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main tfVarStore StyledProps--padding-small"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
      level="2"
      style="color: black; font-size: 24px;"
    >
      cd.specifyTfVarStore
    </h2>
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-flex-start"
    >
      <div
        class="squareCardContainer"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card manifestIcon Card--selected"
          data-testid="varStore-Git"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="service-github"
          >
            <svg
              height="26"
              viewBox="0 0 14 14"
              width="26"
            >
              <path
                d="M13.6 6.4l-6-6C7.3.1 6.7.1 6.4.4L5.1 1.6l1.6 1.6c.4-.1.8 0 1.1.3s.4.7.2 1.1l1.5 1.5c.4-.1.8 0 1.1.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0c-.3-.3-.3-.7-.2-1.1L7.5 5.3V9c.1 0 .2.1.3.2.4.4.4 1.1 0 1.5s-1.1.4-1.5 0-.4-1.1 0-1.5c.1-.1.2-.2.3-.2V5.2c-.1-.1-.2-.1-.3-.2-.3-.4-.4-.8-.2-1.2L4.5 2.3.4 6.4c-.3.3-.3.9 0 1.2l6 6c.3.3.9.3 1.2 0l6-6c.3-.3.3-.9 0-1.2z"
                fill="#f42534"
              />
            </svg>
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
        >
          Git
        </p>
      </div>
      <div
        class="squareCardContainer"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card manifestIcon"
          data-testid="varStore-Github"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="github"
          >
            <svg
              height="26"
              viewBox="0 0 24 24"
              width="26"
            >
              <path
                d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
              />
            </svg>
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
        >
          Github
        </p>
      </div>
      <div
        class="squareCardContainer"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card manifestIcon"
          data-testid="varStore-GitLab"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="service-gotlab"
          >
            <svg
              height="26"
              viewBox="0 0 14 13"
              width="26"
            >
              <path
                d="M7 12.9L9.6 5H4.4z"
                fill="#e24329"
              />
              <path
                d="M7 12.9L4.4 5H.8z"
                fill="#fc6d26"
              />
              <path
                d="M.8 5L0 7.4c0 .2 0 .5.2.6L7 12.9z"
                fill="#fca326"
              />
              <path
                d="M.8 5h3.6L2.9.2c-.1-.2-.5-.2-.5 0z"
                fill="#e24329"
              />
              <path
                d="M7 12.9L9.6 5h3.6z"
                fill="#fc6d26"
              />
              <path
                d="M13.2 5l.8 2.4c0 .2 0 .5-.2.6L7 12.9z"
                fill="#fca326"
              />
              <path
                d="M13.2 5H9.6L11.2.2c.1-.2.4-.2.5 0z"
                fill="#e24329"
              />
            </svg>
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
        >
          GitLab
        </p>
      </div>
      <div
        class="squareCardContainer"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card manifestIcon"
          data-testid="varStore-Bitbucket"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="bitbucket"
          >
            <svg
              height="26"
              width="26"
            >
              <defs>
                <lineargradient
                  id="bitbucket_svg__b"
                  x1="108.633%"
                  x2="46.927%"
                  y1="13.408%"
                  y2="79.102%"
                >
                  <stop
                    offset="18%"
                    stop-color="#0052CC"
                  />
                  <stop
                    offset="100%"
                    stop-color="#2684FF"
                  />
                </lineargradient>
                <filter
                  id="bitbucket_svg__a"
                >
                  <fecolormatrix
                    in="SourceGraphic"
                    values="0 0 0 0 0.157377 0 0 0 0 0.161311 0 0 0 0 0.240000 0 0 0 1.000000 0"
                  />
                </filter>
              </defs>
              <g
                fill="none"
                fill-rule="evenodd"
                filter="url(#bitbucket_svg__a)"
                transform="translate(2 3)"
              >
                <path
                  d="M8.305 12.59h4.383l1.058-6.211H7.14z"
                />
                <path
                  d="M.681.008a.671.671 0 00-.518.235.68.68 0 00-.154.55l2.855 17.432c.074.44.45.764.895.768h13.698a.674.674 0 00.673-.568L20.985.797a.68.68 0 00-.154-.55.671.671 0 00-.519-.235L.682.008zm12.024 12.6H8.333l-1.184-6.22h6.615l-1.06 6.22z"
                  fill="#2684FF"
                  fill-rule="nonzero"
                />
                <path
                  d="M20.06 6.379h-6.308l-1.059 6.215H8.325L3.166 18.75a.908.908 0 00.588.223h13.691a.673.673 0 00.672-.568L20.06 6.38z"
                  fill="url(#bitbucket_svg__b)"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
        >
          Bitbucket
        </p>
      </div>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form>
        <div
          class="formContainerStepOne"
        >
          <div
            style="margin-bottom: 10px;"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                connectors.title.gitConnector
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="question"
                      >
                        <svg
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                        >
                          <path
                            d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                            fill="#9AA5B5"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </p>
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    style="width: 260px;"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                      data-testid="cr-field-varFile.spec.store.spec.connectorRef"
                      style="width: 232px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        >
                          select
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-caret-down StyledProps--main"
                        icon="caret-down"
                      >
                        <svg
                          data-icon="caret-down"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            caret-down
                          </desc>
                          <path
                            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main saveBtn"
        >
          <button
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
